<resources>
    <string name="app_name">Padicure</string>
    <string name="label_name">Name</string>
    <string name="label_name_input">Your Name</string>
    <string name="label_email">Email</string>
    <string name="label_email_input">Your Email</string>
    <string name="label_password">Password</string>
    <string name="label_password_input">Your Password</string>
    <string name="label_login">Login\n</string>
    <string name="label_register_question">Don\'t have an account?</string>
    <string name="label_register">Register</string>
    <string name="label_home">Home\n</string>
    <string name="dummy_name">Andre Eka Putra</string>
    <string name="settings">Settings</string>
    <string name="terms">Terms and Conditions</string>
    <string name="logout">Logout</string>
    <string name="soon">Coming Soon</string>
    <string name="not_available">Coming Soon</string>
    <string name="label_detail">Detail</string>
    <string name="label_apa">Apa itu?</string>
    <string name="dummy_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ultricies nulla vel leo scelerisque, in ultrices nisi auctor. Ut hendrerit quam orci, eget lobortis purus finibus tincidunt. Phasellus malesuada ultricies eros, eget finibus sem sagittis in. Nam vehicula urna at pharetra dapibus. Donec at arcu at felis maximus venenatis id non libero. Nunc sed consectetur erat. Mauris ut ultricies justo. Quisque posuere erat ornare, pellentesque sem ut, rutrum nisl. Maecenas pulvinar lectus ante, ac luctus arcu malesuada in.</string>
    <string name="label_tutorial">Bagaimana mengatasinya?</string>
    <string name="app_slogan">Grow and be Healthy</string>
    <string name="app_slogan_2">Take a picture, Identify, and Cure</string>
    <string name="label_start">Start Now</string>
    <string name="no_pict_available">Belum ada gambar yang bisa diidentifikasi</string>
    <string name="choose_pict">Pilih satu untuk menambahkan gambar</string>
    <string name="label_camera">Camera</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_teridentifikasi">Padi ini \nteridentifikasi\npenyakit</string>
    <string name="penyakit">Leafblast</string>
    <string name="label_akurasi">Akurasi</string>
    <string name="dummy_akurasi">75%</string>
</resources>