<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/itemPicture"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:scaleType="fitXY"
            android:src="@drawable/base_padi_picts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/label_detail"
            android:textColor="@color/ic_launcher_background"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/backButton"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="@+id/backButton" />

        <TextView
            android:id="@+id/itemTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/dummy_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/itemPicture" />

        <TextView
            android:id="@+id/labelDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_apa"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/itemTittle"
            app:layout_constraintStart_toStartOf="@id/itemTittle"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/itemDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dummy_paragraph"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelDetail"
            android:layout_marginHorizontal="20dp" />

        <TextView
            android:id="@+id/labelTutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tutorial"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/itemDetail"
            app:layout_constraintStart_toStartOf="@id/itemDetail"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/itemTutorial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/dummy_paragraph"
            app:layout_constraintTop_toBottomOf="@id/labelTutorial"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


